# nichtparasoup

./: .coveragerc  .editorconfig  .flake8  .gitignore  .gitmodules  .isort.cfg  .mypy.ini  .pylintrc  .sonarcloud.properties  .travis.disabled.yml  .travis.yml  AUTHORS  CHANGELOG  CODEOWNERS  Dockerfile  HISTORY.md  INSTALL  MANIFEST.in  README.md  RELEASEPROCESS,md  RELEASEPROCESS.md  codecov.yml  config.defaults.ini  config.ini  constraints.txt  kadsen.ini  mypy.ini  nichtparasoup.py  nsfw.ini  pr0.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  sfw.ini  sonar-project.properties  templates.py  tox.ini
examples/nichtparasoup-imagecrawler-plugin/: .coveragerc  .gitignore  .mypy.ini  MANIFEST.in  README.md  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
examples/nichtparasoup-imagecrawler-plugin/docs/: index.md  install.md  usage.md
examples/nichtparasoup-imagecrawler-plugin/docs/imagecrawlers/: dummyimage.md
examples/nichtparasoup-imagecrawler-plugin/nichtparasoup_placeholders/: __init__.py  dummyimage.py
examples/nichtparasoup-imagecrawler-plugin/requirements/: dev.in  dev.txt  style.in  style.txt  tests.in  tests.txt
examples/nichtparasoup-imagecrawler-plugin/src/: nichtparasoup_imagecrawler_dummyimage.py
examples/nichtparasoup-imagecrawler-plugin/tests/: README.md  TODO.py
examples/nichtparasoup-imagecrawler-plugin/tests/test_10_nichtparasoup_placeholders/: test_dummyimage.py
examples/nichtparasoup-imagecrawler-plugin/tests/test_90_examples/: test_shipped_config_files.py
examples/nichtparasoup-imagecrawler-plugin/tests/test_examples/: test_shipped_config_files.py
examples/nichtparasoup-imagecrawler-plugin/tests/test_nichtparasoup_placeholders/: test_dummyimage.py
python-package/: .coveragerc  .flake8  .gitignore  .isort.cfg  .mypy.ini  AUTHORS  HISTORY.md  LICENSE  MANIFEST.in  README.md  RELEASEPROCESS.md  codecov.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  sonar-project.properties  tox.ini
python-package/docs/config/: index.md
python-package/docs/dev/: development.md  index.md  release.md  style.md  testing.md
python-package/docs/dev/nichtparasoup/: development.md
python-package/docs/dev/plugin-development/: rules.md
python-package/docs/imagecrawlers/: echo.md  index.md  instagram_hashtag.md  instagram_profile.md  picsum.md
python-package/docs/install/: index.md
python-package/docs/run/: index.md
python-package/docs/web-api/: get.md  index.md  reset.md
python-package/docs/web-api/status/: blacklist.md  crawlers.md  index.md  server.md
python-package/examples/config/: .gitignore  aww.yaml  instabuff.yaml  kadsen.yaml
python-package/requirements/: _bump.sh  build.in  build.txt  constraints.in  constraints.txt  dev.in  dev.txt  style.in  style.txt  tests.in  tests.txt  tox.in  tox.txt
python-package/src/nichtparasoup/: __init__.py  _internals.py  cli.py  imagecrawler.py  imagecrawlers.py  webserver.py
python-package/src/nichtparasoup/_web-ui/: .gitattributes  README.md
python-package/src/nichtparasoup/commands/: __init__.py  _internals.py  imagecrawler_desc.py  imagecrawler_list.py  server_config_check.py  server_config_dump_defaults.py  server_run.py
python-package/src/nichtparasoup/config/: __init__.py  _defaults.yaml  _schema.yaml  defaults.yaml
python-package/src/nichtparasoup/core/: __init__.py  image.py  imagecrawler.py  server.py
python-package/src/nichtparasoup/imagecrawlers/: __init__.py  echo.py  instagram.py  picsum.py  pr0gramm.py  reddit.py
python-package/src/nichtparasoup/testing/: config.py  configfile.py  imagecrawler.py
python-package/src/np_shipped_imagecrawlers/: __init__.py  echo.py  instagram.py  picsum.py  pr0gramm.py  reddit.py
python-package/tests/: .gitignore  README.md  __init__.py
python-package/tests/function/: test_shipped_config_files.py
python-package/tests/integration/imagecrawlers/: test_Echo.py  test_InstagramHashtag.py  test_InstagramProfile.py  test_Picsum.py
python-package/tests/integration/test_imagecrawlers/: test_Pr0gramm.py  test_Reddit.py
python-package/tests/test_10_nichtparasoup/_mocks/: mockable_imagecrawler.py
python-package/tests/test_10_nichtparasoup/test_config/: test_config_parser.py
python-package/tests/test_10_nichtparasoup/test_core/: test_RemoteFetcher.py  test_image.py  test_server.py  test_serverstatus.py
python-package/tests/test_10_nichtparasoup/test_imagecrawlers/: test_instagram.py  test_picsum.py  test_pr0gramm.py
python-package/tests/test_10_nichtparasoup/test_testing/: test_ImageCrawlerLoaderTest.py  test_ImagecrawlerProbeResult.py
python-package/tests/test_10_nichtparasoup/test_webserver/: test_webserver.py
python-package/tests/test_91_examples/test_config/: test_shipped_config_files.py
python-package/tests/unit/: .gitattributes
python-package/tests/unit/test_cli/: test_cli.py
python-package/tests/unit/test_commands/: test_server_config_check.py
python-package/tests/unit/test_config/: test_config_parser.py
python-package/tests/unit/test_core/: mock_BaseImageCrawler.py  test_BaseImageCrawler.py  test_Crawler.py  test_Image.py  test_ImageCollection.py  test_ImageRecognizer.py  (+6 more)
python-plugin-example/: .coveragerc  .editorconfig  .flake8  .gitignore  .isort.cfg  .mypy.ini  INSTALL  MANIFEST.in  README.md  pytest.ini  setup.cfg  setup.py  sonar-project.properties  tox.ini
python-plugin-example/examples/: dummyimage.yaml
python-plugin-example/requirements/: .gitattributes  _bump.sh  dev.in  dev.txt  style.in  style.txt  tests.in  tests.txt  tox.in  tox.txt
python-plugin-example/src/: nichtparasoup_imagecrawler_dummyimage.py
python-plugin-example/tests/: .gitattributes  README.md  fail.py  test_dummy.py
python-plugin-example/tests/function/: test_shipped_config_files.py
python-plugin-example/tests/integration/: test_dummyimage.py
python-plugin-example/tests/test_10_nichtparasoup_placeholders/: test_dummyimage.py
python-plugin-example/tests/test_90_examples/: test_shipped_config_files.py
python-plugin-example/tests/unit/: test_DummyImage.py  test_dummyimage.py
(+501 files in other folders)
