# build system specs
# see https://www.python.org/dev/peps/pep-0517/
# see https://www.python.org/dev/peps/pep-0518/

[build-system]
# see https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = [
  'setuptools >= 46.1',
  'setuptools_scm[toml] >= 3.5',
  'wheel >= 0.34',
]
build-backend = 'setuptools.build_meta'


[tool.setuptools_scm]
# see https://pypi.org/project/setuptools-scm/
fallback_version = 'UNKNOWN.scm'
write_to = 'nichtparasoup/VERSION'
write_to_template = '{version}'
