# build system specs
# see https://www.python.org/dev/peps/pep-0517/
# see https://www.python.org/dev/peps/pep-0518/

[build-system]
# see https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = [
  # keep in sync with `requirements/constraints.txt`
  'setuptools == 49.2.0',
  'wheel == 0.34.2',
  'setuptools_scm[toml] == 4.1.2',
  'toml == 0.10.1',
]
build-backend = 'setuptools.build_meta'


[tool.setuptools_scm]
# see https://pypi.org/project/setuptools-scm/
fallback_version = 'UNKNOWN.scm'
write_to = 'src/nichtparasoup/VERSION'
write_to_template = '{version}'
