## https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files


[metadata]
name = nichtparasoup
description = A hackspaces entertainment system
long_description = file: README.md
long_description_content_type = text/markdown
author = K4CG
author_email = info@k4cg.org
url = https://github.com/k4cg/nichtparasoup/
license = MIT
license_files = LICENSE
classifiers =
    # Trove classifiers - https://packaging.python.org/specifications/core-metadata/#metadata-classifier
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Games/Entertainment
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Typing :: Typed
keywords =
    image-crawler
    instagram
    pr0gramm
    reddit
project_urls =
    Source = https://github.com/k4cg/nichtparasoup/
    Documentation = https://github.com/k4cg/nichtparasoup/tree/master/docs


[options]
python_requires = >= 3.5
packages = find:
include_package_data = True
install_requires =
    typing-extensions >= 3.7.4 ; python_version < '3.8'
    ruamel.yaml >= 0.16
    yamale >= 2.0
    werkzeug >= 1.0
    mako >= 1.1
    setuptools >= 40.0
    click >= 7.1
    # click_completion >= 0.5  # currently unused; see nichtparasoup.cli.completion for details

[options.packages.find]
exclude =
    tests
    examples

[options.extras_require]
colors =
    termcolor >= 1.1
development =
    tox >= 3.14
    isort >= 4.3
    autopep8 >= 1.5
testing=
    flake8 >= 3.7
    flake8-annotations >= 2.0 ; python_version >= '3.6'
    flake8-bugbear >= 20.1 ; python_version >= '3.6'
    flake8-bugbear >= 19.8 , < 20.0 ; python_version < '3.6'
    flake8-isort >= 2.8
    flake8-pep3101 >= 1.3
    pep8-naming >= 0.9
    mypy >= 0.761
    coverage >= 5.0
    pytest >= 5.3
    ddt >= 1.2
    # flake8-builtins  # nice in general, but seams not bug-free, yet.
    # lake8-docstrings # not in use, until all docs are done.
    # flake8-quotes    # not in use until black code styles are setup

[options.entry_points]
console_scripts =
    nichtparasoup = nichtparasoup.cli:main
