## https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files


[metadata]
name = nichtparasoup
version = attr: nichtparasoup.__version__
description = A hackspaces entertainment system
long_description = file: README.md
long_description_content_type = text/markdown
author = K4CG
author_email = info@k4cg.org
maintainer = Jan Kowalleck
license = MIT
license_files = LICENSE
classifiers =
    # Trove classifiers - https://packaging.python.org/specifications/core-metadata/#metadata-classifier
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Typing :: Typed
keywords =
    image-crawler
    instagram
    pr0gramm
    reddit
project_urls =
    Bug Tracker = https://github.com/k4cg/nichtparasoup/issues
    Source Code = https://github.com/k4cg/nichtparasoup/tree/3.0-dev/python-package/

[options]
python_requires = >= 3.6
package_dir =
   = src
packages = nichtparasoup
include_package_data = True
install_requires =
    typing-extensions >= 3.7.4 ; python_version < '3.8'
    # for ConfigFiles:
    ruamel.yaml >= 0.16
    yamale >= 3.0
    # for WebServer:
    werkzeug >= 1.0
    mako >= 1.1
    # for PluginsSupport:
    setuptools >= 41.0
    # for CLI:
    click >= 7.1 , < 8.0

[options.extras_require]
colors =
    termcolor >= 1.1
    colorama >= 0.4

[options.entry_points]
console_scripts =
    nichtparasoup = nichtparasoup.cli:cli.main
