## https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files


[metadata]
name = nichtparasoup-imagecrawler-placeholders
version = 0.0.1.dev
description = PlaceholderImages for UI tests

[options]
python_requires = >= 3.6
package_dir =
    = src
py_modules =
    nichtparasoup_imagecrawler_dummyimage
install_requires =
    nichtparasoup
    # You SHOULD write the min-version dependency in your real-world.
    # This was not done here, since its an in-dev example.

[options.entry_points]
nichtparasoup_imagecrawler =
    DummyImage = nichtparasoup_imagecrawler_dummyimage:DummyImage

