## https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files


[metadata]
name = nichtparasoup-imagecrawler-placeholders
version = 0.0.1
description = PlaceholderImages for UI tests


[options]
python_requires = >= 3.5
packages = find:
install_requires =
    nichtparasoup
    # You SHOULD write the min-version dependency in your real-world.
    # This was not done here, since its an in-dev example.

[options.packages.find]
exclude =
    tests
    examples

[options.entry_points]
nichtparasoup_imagecrawler =
    DummyImage = nichtparasoup_placeholders:DummyImage

[options.extras_require]
testing =
    mypy >= 0.761
    # pytest 5.3.4 had a bug: https://github.com/pytest-dev/pytest/issues/6517
    pytest >= 5.3.5
    coverage >= 5.0
    ddt >= 1.2
