## https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files


[metadata]
name = nichtparasoup-imagecrawler-placeholders
version = 0.0.1
description = PlaceholderImages for UI tests


[options]
python_requires = >= 3.6
packages = find:
install_requires =
    nichtparasoup
    # You SHOULD write the min-version dependency in your real-world.
    # This was not done here, since its an in-dev example.

[options.packages.find]
exclude =
    tests
    examples

[options.entry_points]
nichtparasoup_imagecrawler =
    DummyImage = nichtparasoup_placeholders:DummyImage

